--- a/app/templates/user_management/login.html
+++ b/app/templates/user_management/login.html
@@ -28,8 +28,8 @@
       </p>
       
       <p style="text-align: right; margin-top: 25px;">
-        <button type="submit" class="icon-rocket2 btn btn-success" value="submit" style="width: 95px">
-           login
+        <button type="submit" class="icon-rocket2 btn btn-success" value="submit" style="width: 90px">
+           <span class="btn-txt">login</span>
         </button>
      </p>
 </form>
