--- a/app/templates/user_management/registration.html
+++ b/app/templates/user_management/registration.html
@@ -96,12 +96,12 @@
 
 <p style="text-align: right">
 
-       <a href="\login" class="icon-tl-undo btn btn-default" style="margin-right: 5px; width: 112px;">
-             <span class="btn-txt" style="padding-right: 50px">cancel</span>
+       <a href="\login" class="icon-tl-undo btn btn-default" style="margin-right: 5px; width: 102px;">
+             <span class="btn-txt">cancel</span>
        </a>
  
-       <button type="submit" class="icon-rocket2 btn btn-success" value="submit" id="submit" style="width: 115px" data-loading-text="sending">
-          register
+       <button type="submit" class="icon-rocket2 btn btn-success" value="submit" id="submit" style="width: 110px" data-loading-text=" wait...">
+          <span class="btn-txt">register</span>
        </button>
  </p>
 
