--- a/app/templates/base_logged_in.html
+++ b/app/templates/base_logged_in.html
@@ -26,7 +26,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="/home">Simple Image Sharer</a>
+                    <a class="navbar-brand" href="/home">Group Image Sharer</a>
             </div>
             
             <div class="navbar-collapse collapse navbar-inverse-collapse">
@@ -35,13 +35,10 @@
                             <li><a href="/my/pictures">My Pictures</a></li>
                             <li><a href="/my/groups">My Groups</a></li>
                             <li><a href="/upload">Upload Pictures</a></li>
+                            {% if current_user.username == "admin" %}
+                            <li><a href="/upload">Admin</a></li>
+                            {% endif %}
                     </ul>
-                    
-                    <form class="navbar-form navbar-left">
-                            <input type="text" class="form-control col-lg-8" placeholder="Search">
-                    </form>
-                    
-                    
             </div>
     </div>
                 
