--- a/app/templates/user_management/forgot_password.html
+++ b/app/templates/user_management/forgot_password.html
@@ -28,12 +28,12 @@
       </p>  
       
       <p style="text-align: right; margin-top: 30px;">
-      <a href="/login" class="icon-tl-undo btn btn-default" style="margin-right: 5px; width: 112px;">
-            <span class="btn-txt" style="padding-right: 50px">cancel</span>
+      <a href="/login" class="icon-tl-undo btn btn-default" style="margin-right: 5px; width: 102px;">
+            <span class="btn-txt">cancel</span>
       </a>
       
-      <button class="icon-rocket2 btn btn-success" id="submit" data-loading-text="sending..." style="width: 130px">
-         send mail
+      <button class="icon-rocket2 btn btn-success" id="submit" data-loading-text=" sending" style="width: 120px">
+         <span class="btn-txt">send mail</span>
       </button>
 
       </p>
