--- a/app/templates/user_management/reset_password.html
+++ b/app/templates/user_management/reset_password.html
@@ -28,11 +28,11 @@
       </p>
       
       <p style="text-align: right; margin-top: 30px;">
-      <a href="\login" class="icon-tl-undo btn btn-default" style="margin-right: 5px; width: 112px;">
-            <span class="btn-txt" style="padding-right: 50px">cancel</span>
+      <a href="\login" class="icon-tl-undo btn btn-default" style="margin-right: 5px; width: 102px;">
+            <span class="btn-txt">cancel</span>
       </a>
       
-      <button type="submit" class="icon-rocket2 btn btn-success" value="submit" style="width: 115px;">
+      <button type="submit" class="icon-rocket2 btn btn-success" value="submit" style="width: 110px;">
          <span class="btn-txt" style="padding-right: 60px">submit</span>
       </button>
       </p>
