--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <link href="/static/css/bootstrap.css" rel="stylesheet" media="screen">
         <link href="/static/css/pictonic.css" rel="stylesheet">
-        <script src="http://code.jquery.com/jquery.js"></script>
+        <script src="/static/js/jquery-2.1.1.min.js"></script>
         <script src="/static/js/bootstrap.min.js" async></script>
         <title>
             {% if title %}
