--- a/app/templates/logged_in/picture.html
+++ b/app/templates/logged_in/picture.html
@@ -22,6 +22,17 @@
             {% endif %}
         </p>
 
+        <!-- Timing Field (Only Editable/Viewable By Admin) -->
+        {% if current_user.user_name == "admin"%}
+            <p style="margin-top: 15px">
+                {{ form.timing.label(class="control-label") }}
+                {{ form.timing(placeholder="yyyy-mm-dd", class="form-control input-sm") }}
+                {% if form.timing.errors %}
+                    <span class="text-danger help-block">{{ form.timing.errors[0] }}</span>
+                {% endif %}
+            </p>
+        {% endif %}
+
         <!-- Title Field -->
         <p style="margin-top: 15px">
             {{ form.subject.label(class="control-label") }}
