--- a/app/templates/base_logged_in.html
+++ b/app/templates/base_logged_in.html
@@ -47,6 +47,7 @@
                             {% if current_user.user_name == "admin" %}
                             <li><a href="/admin">Admin</a></li>
                             {% endif %}
+                            <li><a href="/static/help/projectUserDocumentation.pdf">Help</a></li>
                         </ul>
                     </div>
 
